# Degumin

./: Makefile  README.md  dev-requirements.txt  grammar_test  pyproject.toml
Degumin/: Core.py  Error.py  Loggers.py  SST.py  Transformation.py
Degumin/CST/: CST.py  Tree.py
Degumin/Compiler/: Main.py
Degumin/Core/: Transformation.py
Degumin/Parser/: Grammar.lark  Indentation.py  Lexer.py  Parser.py  Token.py  lexer.lark
design/: Modules.md  Parser.md  TypeSystem.md  token.txt
tests/: test_AST.py  test_Identifier.py  test_lark_skip_transformer.py  test_try_to_define_ast_new_way.py
tests/Parser/: test_Identifier.py  test_lexer.py
