[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Degumin"
version = "0.0.1"
dependencies = [
  "lark",
  "hypothesis",
  "black"
  ,"docstring-to-markdown"
  ,"docutils"
  ,"exceptiongroup"
  ,"jedi"
  ,"mypy"
  ,"mypy-extensions"
  ,"packaging"
  ,"pyflakes"
  ,"pylsp-mypy"
  ,"pylsp-rope"
  ,"pytest"
  ,"python-jsonrpc-server"
  ,"python-language-server"
  ,"python-lsp-black"
  ,"python-lsp-jsonrpc"
  ,"python-lsp-server"
  ,"pytoolconfig"
  ,"rope"
  ,"Sphinx"
  ,"typing_extensions"
]

[metadata]
name = "Degumin"
version = "0.0.1"

#[project.scripts]
#megukin = "Degumin.Compiler.Main:main"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  "."
]
log_cli = false

[tool.setuptools.packages.find]
where = ["."]
include = ["Degumin"]  # alternatively: `exclude = ["additional*"]`
namespaces = false


[tool.black]
line-length = 80
target-version = ['py311']

[tool.pylsp_black]
line-length = 80
target-version = ['py311']

[tool.mypy]
#pretty=true
check_untyped_defs=true
warn_no_return=true
warn_return_any=true
# show-error-context=true
# disallow-any-unimported=true
# disallow-any-expr = true
# disallow-any-decorated=true
# disallow-any-explicit=true
# disallow-any-generics=true
# disallow-subclassing-any=true
# disallow-untyped-calls=true
# disallow-untyped-defs=true
# disallow-untyped-decorators=true
